--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/Web.config"
             ],
             "styles": [
               "src/styles.scss"
