--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,10 @@ jobs:
 
     - name: Deploy
       if: success()
-      uses: peaceiris/actions-gh-pages@v3
+      uses: SamKirkland/FTP-Deploy-Action@4.3.3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        server: ${{ secrets.ftp_host }}
+        username: ${{ secrets.ftp_user }}
+        password: ${{ secrets.ftp_password }}
         publish_dir: dist/ilha-das-lendas
-        enable_jekyll: true
+        server-dir: public_html/teste
