--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,4 @@ jobs:
         username: ${{ secrets.ftp_user }}
         password: ${{ secrets.ftp_password }}
         publish_dir: dist/ilha-das-lendas
-        server-dir: public_html/teste
+        server-dir: public_html/teste/
