--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,10 @@ jobs:
 
     - name: Deploy
       if: success()
-      uses: SamKirkland/FTP-Deploy-Action@4.3.3
+      uses: SamKirkland/web-deploy@v1
       with:
-        server: ${{ secrets.ftp_host }}
-        username: ${{ secrets.ftp_user }}
         password: ${{ secrets.ftp_password }}
-        server-dir: public_html/teste/
+        target-server: ${{ secrets.SSH_SERVER }}
+        remote-user: ${{ secrets.SSH_USER }}
+        private-ssh-key: ${{ secrets.SSH_KEY }}
+        destination-path: ~/public_html/teste/
