--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,10 +25,10 @@ jobs:
 
     - name: Deploy
       if: success()
-      uses: SamKirkland/web-deploy@v1
+      uses: SamKirkland/FTP-Deploy-Action@4.3.3
       with:
         server: ${{ secrets.ftp_host }}
         username: ${{ secrets.ftp_user }}
         password: ${{ secrets.ftp_password }}
         local-dir: dist/ilha-das-lendas/
-        server-dir: /domains/ilhadaslendas.live/public_html/
+        server-dir: /domains/${{ secrets.ftp_host }}/public_html/
